--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <main>
     <div id="root"></div>
+    </main>
     <script type="module" src="/src/main.jsx"></script>
+
   </body>
 </html>
+
